--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -8,13 +8,17 @@
         <title>Scan Barcode</title>
     </head>
     <body>
-        <div class="app">
-            <button class="scan">Scan</button>
-            <p class="results">
-                <span class="text"></span><br>
-                <span class="format"></span>
-            </p>
-        </div>
+        <section class="home">
+            <div class="scan">
+                <div class="icon"></div>
+                <p>Skanna</p>
+            </div>
+            <div class="search">
+                <div class="icon"></div>
+                <p>Sök</p>
+            </div>
+        </section>
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/barcodescanner.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -22,5 +26,6 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+        <script src="http://debug.phonegap.com/target/target-script-min.js#superbrick"></script>
     </body>
 </html>
