--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -43,7 +43,7 @@
                 <div class="info">
                     <h1 class="name"><%= product.manufacturer %> <%= product.product_name %></h1>
                     <p>
-                        <a href="<%= product.url %>" class="url"><img src="<%= product.image_link %>"></a>
+                        <img src="<%= product.image_link %>">
                         <p class="description"><%= product.desc %></p>
                     </p>
                     <div class="environment bar-container">
